--- a/src/components/components.css
+++ b/src/components/components.css
@@ -13,10 +13,12 @@ header h1 a{
     margin: 0 auto;
 }
 header .gnb{
+    box-sizing: border-box;
+    width: 1000px;
     padding:25px;
-    margin-top: 40px;
+    margin: 0 auto;
     text-align: center;
-    /* outline: 3px solid yellow; */
+    margin-top: 20px;
 
 }
 header .gnb li{
@@ -43,8 +45,8 @@ header .gnb li:last-child a:hover{
 }
 header .sign{
     position: absolute;
-    right: 10%;
-    top: 10%;
+    right: 100px;
+    top: 50px;
 }
 header .sign li{
     font-size: 13px;
@@ -57,18 +59,18 @@ header .sign li a{
     padding: 5px 10px;
 }
 
+/* container */
 #container .main_slide img{
-    display: block;
+display: block;
     width:100%;
     overflow: hidden;
 }
+.contents1 {display:flex; flex-direction:row; width:1200px; margin:0 auto; text-align:center;}
 .phone_over_hidden{
     /* outline: 2px solid blueviolet; */
     width:350px;
     overflow: hidden;
     margin-top: 5%;
-    float: right;
-    margin-right: 265px;
 }
 .phone_imgs{
     width: 1400px;
@@ -86,9 +88,8 @@ header .sign li a{
 }
 
 .phone_left{
-    float: left;
+    width:50%;
     margin-top: 100px;
-    margin-left: 265px;
     box-sizing: border-box;
 }
 .phone_left p{
@@ -99,15 +100,18 @@ header .sign li a{
     font-size: 40px;
     font-weight: bold;
 }
+.phone_left p{
+    margin-top: 10px;
+}
 .phone_left .plus_group{
-    margin-top: 80px;
+    margin-top: 40px;
     margin-left: 10px;
 }
 .phone_left .plus_group button{
     width: 30px;
     height: 30px;
     font-weight: bold;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(249, 249, 249);
     border: 1px solid #ddd;
     cursor: pointer;
     margin-bottom: 30px;
@@ -116,28 +120,64 @@ header .sign li a{
     font-size: 20px;
     padding:0 10px;
 }
+.minus_btn{
+    border-radius: 15px 5px 5px 15px;
+}
+.plus_btn{
+    border-radius: 5px 15px 15px 5px;
+}
 .phone_left .pay_button {
-    margin-top: 40px;
+    margin-top: 25px;
 }
 .phone_left .pay_button button{
     cursor: pointer;
-    width:210px;
+    width:180px;
     padding:15px 0;
     color: #fff;
     padding:15px 50px;
     background-color: blue;
     border: 0;
     border-radius: 50px;
-    font-size: 17px;
+    font-size: 18px;
     margin-right: 10px;
+}
+.phone_left .pay_button button:last-child{
+    background-color: rgb(65, 65, 65);
 }
 .phone_left .result{
     display: inline-block;
     width: 20px;
     text-align: center;
+    position:relative;
+    top: 3px;
+    color: rgb(70, 70, 70);
 }
+.sum_group{
+    border-top:1px dashed rgb(223, 223, 223);
+    padding-top: 15px;
+    width:300px;
+    margin: 0 auto;
+    margin-top: 15px;
+}
+.sum_result{
+    width:150px;
+    display: inline-block;
+    text-align: right;
+    font-weight: 700;
+    font-size: 27px;
+    color:blue;
+}
+.sum_hap, .sum_won{
+    font-weight: 700;
+    position:relative;
+    bottom:2px;
+}
+
 .phone_right{
-    float: right;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
     width: 50%;
     margin-top: 30px;
     box-sizing: border-box;
@@ -146,12 +186,9 @@ header .sign li a{
 .color_group{
     width:350px;
     margin-top: 2%;
-    float: right;
-    margin-right: 200px;
 }
 .color{
     margin:0 10px;
-    float: left;
     width: 40px;
     height: 40px;
     background-color: black;
@@ -176,16 +213,11 @@ header .sign li a{
 }
 .contents2{
     margin-top: 500px;
-    outline: 2px solid pink;
     display: block;
-    height: 1000px;
-    /* background: url(https://images.samsung.com/sec/smartphones/galaxy-z-flip3-5g/images/galaxy-z-flip3-5g_highlights_experience.jpg) center;
-    background-size: cover; */
 }
 
- /* 푸터 */
+ /* footer */
 .footer{
-    background-color: rgb(211, 211, 211);
     display: block;
     padding-top: 50px;
     padding-bottom: 50px;
