--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,4 +1,5 @@
 *{
+    font-family: 'Gothic A1', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -14,7 +15,7 @@ header h1 a{
 }
 header .gnb{
     box-sizing: border-box;
-    width: 1000px;
+    width: 1200px;
     padding:25px;
     margin: 0 auto;
     text-align: center;
@@ -65,12 +66,18 @@ display: block;
     width:100%;
     overflow: hidden;
 }
-.contents1 {display:flex; flex-direction:row; width:1200px; margin:0 auto; text-align:center;}
+.contents1 {
+    display:flex;
+    flex-direction:row;
+    width:1200px;
+    margin:0 auto;
+    text-align:center;
+}
 .phone_over_hidden{
     /* outline: 2px solid blueviolet; */
     width:350px;
     overflow: hidden;
-    margin-top: 5%;
+    margin-top: 50px;
 }
 .phone_imgs{
     width: 1400px;
@@ -93,8 +100,10 @@ display: block;
     box-sizing: border-box;
 }
 .phone_left p{
-    font-size: 13px;
     color:rgb(92, 92, 92);
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 30px;
 }
 .phone_left .big_txt{
     font-size: 40px;
@@ -102,9 +111,12 @@ display: block;
 }
 .phone_left p{
     margin-top: 10px;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 30px;
 }
 .phone_left .plus_group{
-    margin-top: 40px;
+    margin-top: 25px;
     margin-left: 10px;
 }
 .phone_left .plus_group button{
@@ -169,6 +181,7 @@ display: block;
 }
 .sum_hap, .sum_won{
     font-weight: 700;
+    font-size: 20px;
     position:relative;
     bottom:2px;
 }
@@ -213,40 +226,46 @@ display: block;
 }
 .contents2{
     display: block;
-    width: 1200px;
+    width: 1000px;
     margin: 0 auto;
     margin-top: 150px;
-}
-.spec_left_group{
-    /* outline: 3px solid black; */
-    margin: 0 auto;
-    width:500px;
+    margin-bottom: 150px;
 }
 
-.spec_left_txt li, .spec_right li{
-    padding:10px;
+
+.spec_group{
+    display: flex;
+    flex-direction: row;
+}
+.spec_left_group{
+    width:500px;
 }
 .spec_left_txt{
     display: flex;
     flex-direction: row;
     width:500px;
     list-style: none; 
-    justify-content: space-around
- 
+    justify-content: space-around;
 }
-.spec_left_txt li a, .spec_right li a{
+
+
+.spec_left_txt li .active{
+    background-color: rgb(214, 226, 254);
+    font-weight: 600;
+    color:black;
+}
+.spec_left_txt li a{
     color:rgb(109, 109, 109);
     text-decoration: none;
     background-color: fff;
-    padding:7px 20px;
-    font-size: 16px;
+    padding:8px 20px;
+    font-size: 18px;
     border-radius: 30px;
     border: 1px solid rgb(109, 109, 109);
-    
 }
 .spec_left_img_group{
     box-sizing: border-box;
-    margin-top: 30px;
+    margin-bottom: 30px;
     border-radius: 20px;
     overflow: hidden;
     position:relative;
@@ -254,26 +273,56 @@ display: block;
     width:500px;
     height:420px;
 }
-.spec_left_img h2{
-    padding: 20px 40px;
-    margin-top: 20px;
-}
-.spec_left_img p{
-    padding: 10px 40px;
-}
 
+.spec_left_img h2{
+    padding: 20px 40px 10px;
+    margin-top: 20px;
+    font-size: 27px;
+}
+.spec_left_img p {
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+    letter-spacing: -0.02em;
+}
 .spec_left_img img{
     display: block;
     position:absolute;
     bottom:-5px;
     width:500px;
-    
 }
-.spec_right_img img{
-    display: block;
-    width:250px;
+.spec_right_group{
+    /* outline: 1px solid blue; */
+    width:600px;
+    margin-left:80px;
+    vertical-align: top;
+}
+.spec_right_group h2{
+    font-size: 40px;
+    margin-top: 100px;
+}
+.spec_right_group p{
+    font-size: 23px;
+    font-weight: 300;
+    margin-top:40px;
+    line-height: 30px;
 }
 
+/* modal */
+.youtube_area{
+    display: block;
+    margin:150px 0;
+    width:100%;
+    text-align: center;
+}
+
+.modal_button{
+    background-color: blue;
+    color:#fff;
+    padding:30px 70px;
+    text-align: center;
+}
  /* footer */
 .footer{
     display: block;
