--- a/src/components/components.css
+++ b/src/components/components.css
@@ -333,22 +333,28 @@ display: block;
 
 /* modal */
 .modal_group{
+   
     z-index: 10;
-    outline: 5px solid red;
-    display: block;
+    height: 100vh;
+    background:url("../../public/imgs/bespoke.jpg") no-repeat center;
     margin:150px 0;
-    width:100%;
-    height: 100%;
     text-align: center;
     position:relative;
+    
 }
 
 .modal_open{
     all:unset;
-    background-color: blue;
     color: #fff;
     padding: 5px 20px;
     cursor: pointer;
+    display: block;
+    
+}
+.modal_open img{
+    width:500px;;
+    margin-top: 150px;
+    border: 10px solid #575459;
 }
 .modal{
     position:fixed;
@@ -369,8 +375,6 @@ display: block;
 .modal_content {
     position:relative;
     background-color: #fff;
-    /* padding:50px 100px; */
-    /* overflow: hidden; */
     text-align: center;
     position: fixed;
     width:750px;
@@ -382,13 +386,21 @@ display: block;
 }
 .x_button{
     all:unset;
-    width:50px;
-    height: 50px;
+    width:40px;
+    height: 40px;
     border-radius: 50px;
     background-color: #fff;
-    position: absolute;
-    bottom:-70px;
-    box-shadow: 3px 3px 10px rgba(0,0,0,0.3);
+    position: relative;
+    bottom:-20px;
+    box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+}
+.x_button:hover{
+    transition: 0.7s;
+    transform: scale(130%);
+}
+.x_button:not(:hover){
+    transition: 0.7s;
+    transform: scale(100%);
 }
  /* footer */
 .footer{
